@@ -91,17 +91,24 @@ trim <- function(x, ...) {
 }
 
 
-import_future <- function(name, default = NULL) {
-  ns <- getNamespace("future")
+import_from <- function(name, default = NULL, package) {
+  ns <- getNamespace(package)
   if (exists(name, mode = "function", envir = ns, inherits = FALSE)) {
     get(name, mode = "function", envir = ns, inherits = FALSE)
   } else if (!is.null(default)) {
     default
   } else {
-    stop(sprintf("No such 'future' function: %s()", name))
+    stop(sprintf("No such '%s' function: %s()", package, name))
   }
 }
 
+import_future <- function(name, default = NULL) {
+  import_from(name, default = default, package = "future")
+}
+
+import_batchtools <- function(name, default = NULL) {
+  import_from(name, default = default, package = "batchtools")
+}
 
 ## Evaluates an expression in global environment.
 ## Because geval() is exported, we want to keep its environment()
